Styling through content box 3 complete Will probably tweak later

--- a/landing-page.html
+++ b/landing-page.html
@@ -13,81 +13,93 @@
 <body>
     <!-- start with larger containers -->
      <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <nav class="nav">
-            <li>
-                <a href="#" class="nav-link">header link 1</a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">header link 2</a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">header link 3</a>
-            </li>
-        </nav>
+        <div class="large-box">
+            <div class="header-logo">Header Logo</div>
+            <nav class="nav">
+                <li>
+                    <a href="#" class="nav-link">header link 1</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">header link 2</a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">header link 3</a>
+                </li>
+            </nav>
+        </div>
+        
      </div>
      <div class="content-box cb-1">
-        <div class="cb-1-content">
-            <h1>This website is awesome</h1>
-            <p2>This website has some subtext that goes here under the main title. 
-                It's a smaller font and the color is lower contrast
-            </p2>
-            <button class="button-1">Sign up</button>
+        <div class="large-box">
+            <div class="cb-1-content">
+                <h1>This website is awesome</h1>
+                <p class="p2">This website has some subtext that goes here under the main title. 
+                    It's a smaller font and the color is lower contrast
+                </p class="p2">
+                <button class="button-1">Sign up</button>
+            </div>
+            <div class="cb-1-img">this is a placeholder for an image</div>
         </div>
-        <div class="cb-1-img">this is a placeholder fo an image</div>
+        
      </div>
      <div class="content-box cb-2">
-        <h2>Some random information</h2>
-        <div class="cards-container">
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-text">
-                    This is some subtext under an illustration or image
+        <div class="small-box">
+            <h2>Some random information</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-text">
-                    This is some subtext under an illustration or image
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-text">
-                    This is some subtext under an illustration or image
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
                 </div>
-            </div>
-            <div class="card">
-                <div class="card-img"></div>
-                <div class="card-text">
-                    This is some subtext under an illustration or image
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
                 </div>
             </div>
         </div>
      </div>
      <div class="content-box cb-3">
-        <div class="quote-text">
-            <p1>
-                This is an inspiring quote or testimonial from a customer. 
-                Maybe it's just filling up space, or maybe people will actually read it. 
-                Who knows? All I konw is that it looks nice
-            </p1>
-        </div>
-        <div class="quote-citation">
-            <h4>-Thor, God of Thunder</h4>
+        <div class="small-box">
+            <div class="quote-text">
+                <p class="p1">
+                    <em>
+                    This is an inspiring quote or testimonial from a customer. 
+                    Maybe it's just filling up space, or maybe people will actually read it. 
+                    Who knows? All I know is that it looks nice
+                    </em>
+                </p class="p1">
+            </div>
+            <div class="quote-citation">
+                <h4>-Thor, God of Thunder</h4>
+            </div>
         </div>
      </div>
      <div class="content-box cb-4">
         <div class="cta-box">
             <div class="cta-text-box">
                 <h4>Call to action! It's time!</h4>
-                <p2>Sign up for our product by clicking the button right over there.</p2>
+                <p class="p2">Sign up for our product by clicking the button right over there.</p class="p2">
             </div>
             <button class="button-2">Sign up</button>
         </div>
      </div>
      <div class="footer">
-        <p2>copywrite (c) © Flower Grid Coding 2024</p2>
+        <p class="p2">copywrite (c) © Flower Grid Coding 2024</p class="p2">
      </div>
 </body>
 </html>
