--- a/landing-page.html
+++ b/landing-page.html
@@ -14,16 +14,18 @@
     <!-- start with larger containers -->
      <div class="header">
         <div class="large-box">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">
+                <a href="http://www.westernrewindband.com">Western Rewind Band</a>
+            </div>
             <nav class="nav">
                 <li>
-                    <a href="#" class="nav-link">header link 1</a>
+                    <a href="https://www.westernrewindband.com/events" class="nav-link">About</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">header link 2</a>
+                    <a href="https://www.westernrewindband.com/media" class="nav-link">Media</a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link">header link 3</a>
+                    <a href="https://www.westernrewindband.com/blog" class="nav-link">Blog</a>
                 </li>
             </nav>
         </div>
@@ -32,42 +34,54 @@
      <div class="content-box cb-1">
         <div class="large-box">
             <div class="cb-1-content">
-                <h1>This website is awesome</h1>
-                <p class="p2">This website has some subtext that goes here under the main title. 
-                    It's a smaller font and the color is lower contrast
-                </p class="p2">
-                <button class="button-1">Sign up</button>
+                <h1>The Best 90s Country Cover Band</h1>
+                <p class="p2">Western Rewind is the throwback country music fan’s live entertainment solution. 
+                    Whether you’re planning a corporate event, wedding, or private gathering Western Rewind is 
+                    the 90s country cover band with the flexibility to match your needs. 
+                </p>
+                <button class="button-1" onclick="location.href='https://www.westernrewindband.com/epk';">Contact</button>
             </div>
-            <div class="cb-1-img">this is a placeholder for an image</div>
+            <div class="cb-1-img">
+                <img src="static/Western Rewind white transparent.png" alt="Western Rewind Band is the best 90s country cover band around">
+                <!-- this is a placeholder for an image -->
+            </div>
         </div>
         
      </div>
      <div class="content-box cb-2">
         <div class="small-box">
-            <h2>Some random information</h2>
+            <h2>We bring the magic of 90s country to your event!</h2>
             <div class="cards-container">
                 <div class="card">
-                    <div class="card-img"></div>
+                    <div class="card-img">
+                        <img src="static/corporate-events.png">
+                    </div>
                     <div class="card-text">
-                        This is some subtext under an illustration or image
+                        Elevate your next corporate event with the nostalgic sounds of your favorite 90s country artists
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
+                    <div class="card-img">
+                        <img src="static/festivals.png">
+                    </div>
                     <div class="card-text">
-                        This is some subtext under an illustration or image
+                        Make your festival a night to remember with everyone's favorite country classics
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
+                    <div class="card-img">
+                        <img src="static/weddings.png">
+                    </div>
                     <div class="card-text">
-                        This is some subtext under an illustration or image
+                        Planning a wedding? Our 90s country cover band will keep your guests dancing all night long
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-img"></div>
+                    <div class="card-img">
+                        <img src="static/private-parties.png">
+                    </div>
                     <div class="card-text">
-                        This is some subtext under an illustration or image
+                        Take your private party to the next level with our 90s country western party band
                     </div>
                 </div>
             </div>
@@ -78,28 +92,33 @@
             <div class="quote-text">
                 <p class="p1">
                     <em>
-                    This is an inspiring quote or testimonial from a customer. 
-                    Maybe it's just filling up space, or maybe people will actually read it. 
-                    Who knows? All I know is that it looks nice
+                        "WRB is one of my favorite bands! Every time they are in town, 
+                        our dance floor is packed and people are asking when they’ll be back."
                     </em>
-                </p class="p1">
+                </p>
             </div>
             <div class="quote-citation">
-                <h4>-Thor, God of Thunder</h4>
+                <h4>-Melinda, The Dirty Bourbon Saloon</h4>
             </div>
         </div>
      </div>
      <div class="content-box cb-4">
-        <div class="cta-box">
-            <div class="cta-text-box">
-                <h4>Call to action! It's time!</h4>
-                <p class="p2">Sign up for our product by clicking the button right over there.</p class="p2">
+        <div class="large-box">
+            <div class="cta-box">
+                <div class="cta-text-box">
+                    <h4>Book your next event today!</h4>
+                    <p class="p2">
+                        Click that button right over there to recieve $250 off when you book your first event
+                    </p>
+                </div>
+                <button class="button-2">Sign up</button>
             </div>
-            <button class="button-2">Sign up</button>
         </div>
      </div>
      <div class="footer">
-        <p class="p2">copywrite (c) © Flower Grid Coding 2024</p class="p2">
+        <p class="p2">
+            copywrite © Flower Grid Coding 2024
+        </p>
      </div>
 </body>
 </html>
