Needed to link one last button

--- a/landing-page.html
+++ b/landing-page.html
@@ -111,7 +111,9 @@
                         Click that button right over there to recieve $250 off when you book your first event
                     </p>
                 </div>
-                <button class="button-2">Sign up</button>
+                <button class="button-2" onclick="location.href='https://www.westernrewindband.com/epk#block-yui_3_17_2_1_1720626215200_16377';">
+                    Contact us!
+                </button>
             </div>
         </div>
      </div>
