--- a/landing-page.html
+++ b/landing-page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
+    <link rel="icon" href="static/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <!-- roboto font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
