Changed the business to be bubble wrap therapy New photos and new copy

--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
      <div class="header">
         <div class="large-box">
             <div class="header-logo">
-                <a href="http://www.westernrewindband.com">Western Rewind Band</a>
+                <a href="#">Wrapsody In Bubble</a>
             </div>
             <nav class="nav">
                 <li>
-                    <a href="https://www.westernrewindband.com/events" class="nav-link">About</a>
+                    <a href="#" class="nav-link">About us</a>
                 </li>
+                |
                 <li>
-                    <a href="https://www.westernrewindband.com/media" class="nav-link">Media</a>
+                    <a href="#" class="nav-link">Our method</a>
                 </li>
+                |
                 <li>
-                    <a href="https://www.westernrewindband.com/blog" class="nav-link">Blog</a>
+                    <a href="#" class="nav-link">Blog</a>
                 </li>
             </nav>
         </div>
@@ -35,15 +37,19 @@
      <div class="content-box cb-1">
         <div class="large-box">
             <div class="cb-1-content">
-                <h1>The Best 90s Country Cover Band</h1>
-                <p class="p2">Western Rewind is the throwback country music fan’s live entertainment solution. 
-                    Whether you’re planning a corporate event, wedding, or private gathering Western Rewind is 
-                    the 90s country cover band with the flexibility to match your needs. 
+                <h1>Soothe your mind with bubble wrap therapy</h1>
+                <p class="p2">Experience the ultimate stress relief with 
+                    Wrapsody in Bubble, where soothing jazz melodies meet 
+                    the satisfying pop of bubble wrap. Indulge in our unique 
+                    therapy sessions designed to relax your mind and bring 
+                    joy to your soul. Unwind, pop, and let the music take 
+                    you away. Perfect for jazz lovers and anyone seeking 
+                    a truly unique relaxation experience.
                 </p>
-                <button class="button-1" onclick="location.href='https://www.westernrewindband.com/epk';">Contact</button>
+                <button class="button-1">Book a session</button>
             </div>
             <div class="cb-1-img">
-                <img src="static/Western Rewind white transparent.png" alt="Western Rewind Band is the best 90s country cover band around">
+                <img src="static/eyeball.png" alt="Western Rewind Band is the best 90s country cover band around">
                 <!-- this is a placeholder for an image -->
             </div>
         </div>
@@ -55,34 +61,49 @@
             <div class="cards-container">
                 <div class="card">
                     <div class="card-img">
-                        <img src="static/corporate-events.png">
+                        <img src="static/hands.png">
                     </div>
                     <div class="card-text">
-                        Elevate your next corporate event with the nostalgic sounds of your favorite 90s country artists
+                        Unwind with the satisfying sound and sensation of 
+                        bubble wrap popping. It’s not just fun—it’s 
+                        therapeutic! 
+                        <!-- Let the rhythmic pops melt your stress  -->
+                        <!-- away. -->
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="static/festivals.png">
+                        <img src="static/car.png">
                     </div>
                     <div class="card-text">
-                        Make your festival a night to remember with everyone's favorite country classics
+                        Experience the joy of wrapping yourself in bubble 
+                        wrap for a cocoon of comfort. Our unique wrap 
+                        sessions provide a gentle, cozy hug.
+                        <!-- that helps you  -->
+                        <!-- relax and recharge. -->
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="static/weddings.png">
+                        <img src="static/dog.png">
                     </div>
                     <div class="card-text">
-                        Planning a wedding? Our 90s country cover band will keep your guests dancing all night long
+                        Why not share the bubble wrap bliss with your furry 
+                        friends? Our pet-friendly sessions let your pets join 
+                        in on the fun.
+                        <!-- offering them a relaxing and engaging  -->
+                        <!-- experience too. -->
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
-                        <img src="static/private-parties.png">
+                        <img src="static/eyes.png">
                     </div>
                     <div class="card-text">
-                        Take your private party to the next level with our 90s country western party band
+                        <!-- At Wrapsody in Bubble, there’s no need for pretense.  -->
+                        Whether you're here for the jazz, the pops, or just 
+                        to be yourself, our space is all about embracing 
+                        relaxation in your own unique way.
                     </div>
                 </div>
             </div>
@@ -93,13 +114,17 @@
             <div class="quote-text">
                 <p class="p1">
                     <em>
-                        "WRB is one of my favorite bands! Every time they are in town, 
-                        our dance floor is packed and people are asking when they’ll be back."
+                        "Wrapsody in Bubble was such a pleasant surprise! 
+                        The combination of smooth jazz and popping bubble 
+                        wrap was oddly satisfying and really helped me relax. 
+                        I never thought something so simple could be so 
+                        effective at reducing stress. I’m definitely going to 
+                        make this a regular part of my self-care routine!"
                     </em>
                 </p>
             </div>
             <div class="quote-citation">
-                <h4>-Melinda, The Dirty Bourbon Saloon</h4>
+                <h4>-Chris P. Bacon</h4>
             </div>
         </div>
      </div>
@@ -107,13 +132,13 @@
         <div class="large-box">
             <div class="cta-box">
                 <div class="cta-text-box">
-                    <h4>Book your next event today!</h4>
+                    <h4>Book your session today!</h4>
                     <p class="p2">
-                        Click that button right over there to recieve $250 off when you book your first event
+                        Click that button right over there to recieve $2,500 off when you book your first session
                     </p>
                 </div>
-                <button class="button-2" onclick="location.href='https://www.westernrewindband.com/epk#block-yui_3_17_2_1_1720626215200_16377';">
-                    Contact us!
+                <button class="button-2">
+                    Book Today!
                 </button>
             </div>
         </div>
