cleaned up some of the text added CSS to make it look good on mobile

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
                     <a href="#" class="nav-link">Blog</a>
                 </li>
             </nav>
-        </div>
-        
+        </div>  
      </div>
      <div class="content-box cb-1">
         <div class="large-box">
+            <div class="cb-1-img">
+                <img src="static/eyeball.png" alt="Bubble Wrap Therapy by Wrapsody in Bubble">
+            </div>
             <div class="cb-1-content">
                 <h1>Soothe your mind with bubble wrap therapy</h1>
                 <p class="p2">Experience the ultimate stress relief with 
@@ -48,16 +50,11 @@
                 </p>
                 <button class="button-1">Book a session</button>
             </div>
-            <div class="cb-1-img">
-                <img src="static/eyeball.png" alt="Western Rewind Band is the best 90s country cover band around">
-                <!-- this is a placeholder for an image -->
-            </div>
         </div>
-        
      </div>
      <div class="content-box cb-2">
         <div class="small-box">
-            <h2>We bring the magic of 90s country to your event!</h2>
+            <h2>Pop your troubles, wrap up your stress—bubble wrap therapy, it's a wrap!</h2>
             <div class="cards-container">
                 <div class="card">
                     <div class="card-img">
