--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
      </div>
      <div class="footer">
         <p class="p2">
-            copywrite © Flower Grid Coding 2024
+            copyright © Flower Grid Coding 2024
         </p>
      </div>
 </body>
